# hulqcorpustools

./: .gitignore  .gitmodules  MANIFEST.in  README.md  dev_gunicorn.sh  pyproject.toml  requirements.txt  setup.cfg  transliterator glottalized resonant rules and examples
hulqcorpusresources/: __init__.py  constants.py  hulqwordfrequency.py
hulqcorpusresources/graphemes/: __init__.py
hulqcorpusresources/hulqcorpustools/: .gitmodules
hulqcorpusresources/hulqcorpustools/hulqwordfrequency/: hulqwordfrequency.py
hulqcorpusresources/hulqcorpustools/tests/: keyworddetector-test.txt
hulqcorpusresources/hulqspellchecker/: hulqspellchecker.py
hulqcorpusresources/hulqwordfrequency/: hulqwordfrequency.py
hulqcorpusresources/hulqwordfrequency/output/: word_frequency_wordlist.txt  word_frequency_wordlist_incl.json
hulqcorpusresources/hwordlists/: __init__.py
hulqcorpusresources/wordlists/: __init__.py  hukari-peter-parses.xlsx  hulq-wordlist-orthography.txt  hulq-wordlist-straight.txt
hulqcorpustools/: corpusparser.py  docxreader.py  generaterawtextcorpus.py  rawtextutils.py  wordfrequency.py  wordlists.py
hulqcorpustools/compilation/: compilecorpus.py
hulqcorpustools/corpus/: compilecorpus.py  corpus.py
hulqcorpustools/corpus/metadata/: headings.csv
hulqcorpustools/corpusdata/: hulq-story-annotation-template.dotx
hulqcorpustools/docxmanager/: docxreader.py
hulqcorpustools/docxtools/: docxannotationreader.py  docxextractor.py  docxtextannotator.py  hulqdocx.py
hulqcorpustools/hulqcorpustools/: keyworddetector.py
hulqcorpustools/hulqspellchecker/: hulqspellchecker.py
hulqcorpustools/hulqtransliterator/: README.md  __main__.py  cli.py  maingui.py
hulqcorpustools/hulqtransliterator/filehandlers/: docworker.py  txtworker.py
hulqcorpustools/hulqtransliterator/gui/: gui.py
hulqcorpustools/hulqtransliterator/onlinetransliterator/: app.py  onlinetransliterator.py  transliteratorwebview.py  wordfrequencywebview.py
hulqcorpustools/hulqtransliterator/transliterator/: __init__.py  controller.py  replaceengine.py
hulqcorpustools/hulqtransliterator/ui/: __init__.py
hulqcorpustools/hulqwordfrequency/: hulqwordfrequency.py
hulqcorpustools/resources/: approximate.csv  approximate.py  constants.py  corpusparts.py  dictionary.py  graphemes.json  graphemes.py  textannotations.py  wordlists.py
hulqcorpustools/resources/data/: drh-order.csv  hukari-peter-parses.xlsx  shnuwilh.csv  vocab-db.csv  weak_approximate.csv  words_alpha_vowels.txt  words_alpha_vowels_longer_words.txt
hulqcorpustools/resources/docxannotationdata/: hulq-story-annotation-template copy.docx  hulq-story-annotation-template.docx  (+2 more)
hulqcorpustools/transliterator/: cli.py  controller.py  replaceengine.py  txt.py
hulqcorpustools/utils/: docxtools.py  files.py  keyworddetector.py  keywordprocessors.py  languagesusser.py  plaintext.py  plaintextcorpuscompiler.py  textcounter.py  textlineannotator.py
hulqcorpustools/vocablookup/: vocablookup.py
hulqcorpustools/webapps/: __init__.py  app.py  config.json  transliteratorwebview.py  vocablookupwebview.py  wordfrequencywebview.py
hulqcorpustools/xml/: plaintextxml.py
hulqwordfrequency/: hulqwordfrequency.py
hulqwordfrequency/output/: word_frequency.txt
output/: word_frequency_wordlist_incl.txt
(+41 files in other folders)
