[build-system]
requires = [
"setuptools>=61.0",
"wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
static = ["*.ttf", "*.css"]
templates = ["*.html"]

[tool.pytest.ini_options]
minversion="6.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q"
]
testpaths = [
    "tests"
]

[project]
name = "hulqcorpustools"
version = "0.1.0"
authors = [
    { name="Zack Gilkison", email="zack.gilkison@gmail.com" },
]
description = "some corpus tools for working on Hul’q’umi’num’"
readme = "README.md"
dependencies = [
    "flashtext",
    "flask",
    "gunicorn",
    "python-docx",
    "regex"
    ]

[project.optional-dependencies]
    wordfrequency = ["pandas"]

[project.scripts]
