[build-system]
requires = [
"setuptools>=68.0",
"wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hulqcorpustools"
version = "0.2.1"
authors = [
    { name="Zack Gilkison", email="zack.gilkison@gmail.com" },
]
description = "some corpus tools for working on Hul’q’umi’num’"
readme = "README.md"
dependencies = [
    "flashtext",
    "flask",
    "gunicorn",
    "python-docx",
    "regex",
    "pandas",
    "python-dotenv",
    "boto3"
    ]

[project.scripts]

[tool.setuptools.package-data]
hulqcorpustools = ["*.ttf", "*.css", "*.html", "*.csv"]

[tool.pytest.ini_options]
minversion="6.0"
addopts = [
    "--import-mode=importlib",
    "-ra -q"
]
testpaths = [
    "tests"
]