[metadata]
name = hulqcorpusresources
version =  0.0.1
author = Zack Gilkison
author_email = zack.gilkison@gmail.com
description= some common resources to be shared between projects working on hulq
[options]
packages = find:
install_requires =
    requests
    importlib-metadata; python_version >= "3.10"
include_package_data = True

[options.packages.find]
include=hulqcorpusresources*
exclude=*.pyc, hulqcorpusresources.tests*

[options.package_data]
* = *.txt, *.json