[metadata]
name = hulqcorpustools
version =  0.0.2
author = Zack Gilkison
author_email = zack.gilkison@gmail.com
description= some common resources to be shared between projects working on hulq
[options]
packages = find:
install_requires =
    requests
    importlib-metadata; python_version >= "3.10"
include_package_data = True

[options.packages.find]
include=hulqcorpustools*
exclude=*.pyc, hulqcorpustools.tests*

[options.package_data]
* = *.txt, *.json
